# finances

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  routes.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  callbacks.rs  main.rs
frontend/src/balance/: mod.rs
frontend/src/budget/: mod.rs
frontend/src/components/: mod.rs
frontend/src/home/: accounts.rs  fields.rs  mod.rs  transaction_form.rs  transactions.rs
frontend/src/monthly/: mod.rs
