[workspace]
members = [
  "backend",
  "frontend",
  "common",
]

[workspace.dependencies]
common = {path = "common"}
chrono = { version ="0.4.23", features = ["serde"] }
serde = "1.0.152"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }
tokio = { version = "1", features = ["full"]}
serde_json = "1.0.93"
anyhow = "1.0.69"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.34"
axum = {version = "0.6.8", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
web-sys = {version = "0.3.61", features = ["HtmlInputElement"]}
log = "0.4.6"
wasm-logger = "0.2.0"
