[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {workspace = true}
sqlx = { workspace = true}
tokio = { workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
axum = {workspace = true}
tracing-subscriber = {workspace = true}
tracing = {workspace = true}