[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {workspace = true}
yew = {workspace = true}
yew-router = {workspace = true}
reqwasm = {workspace = true}
wasm-bindgen-futures = {workspace = true}
serde = {workspace = true}
