[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {workspace = true}
yew = {workspace = true}
yew-router = {workspace = true}
yew-hooks = {workspace = true}
reqwasm = {workspace = true}
wasm-bindgen-futures = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
web-sys = {workspace = true}
log = {workspace = true}
wasm-logger = {workspace = true}
chrono = {workspace = true}
anyhow = {workspace = true}
plotly = {workspace = true}
yew-plotly = "0.2.0"
